--- a/src/main/webapp/resources/scaffold/pageTemplate.xhtml
+++ b/src/main/webapp/resources/scaffold/pageTemplate.xhtml
@@ -39,7 +39,7 @@
 					<h:link outcome="/branch/search" value="Branch"/>
 				</li>
 				<li>
-					<h:link outcome="/events/search" value="Events"/>
+					<h:link outcome="/event/search" value="Event"/>
 				</li>
 				<li>
 					<h:link outcome="/sponsor/search" value="Sponsor"/>
