--- a/src/main/webapp/event/search.xhtml
+++ b/src/main/webapp/event/search.xhtml
@@ -8,18 +8,18 @@
 	template="/resources/scaffold/pageTemplate.xhtml">
 
 	<f:metadata>
-		<f:viewParam name="page" value='#{eventsBean.page}'/>
-		<f:event type="preRenderView" listener='#{eventsBean.paginate}'/>
+		<f:viewParam name="page" value='#{eventBean.page}'/>
+		<f:event type="preRenderView" listener='#{eventBean.paginate}'/>
 	</f:metadata>
 
-	<ui:param name="pageTitle" value="Search Events entities"/>
+	<ui:param name="pageTitle" value="Search Event entities"/>
 
 	<ui:define name="header">
-		Events
+		Event
 	</ui:define>
 
 	<ui:define name="subheader">
-		Search Events entities
+		Search Event entities
 	</ui:define>
 
 	<ui:define name="footer"/>
@@ -30,41 +30,41 @@
 				<h:panelGroup styleClass="search">
 
 					<h:panelGrid columnClasses="label,component,required" columns="3">
-						<h:outputLabel for="eventsBeanExampleName" value="Name:"/>
+						<h:outputLabel for="eventBeanExampleName" value="Name:"/>
 						<h:panelGroup>
-							<h:inputText id="eventsBeanExampleName" maxLength="150" value="#{eventsBean.example.name}"/>
-							<h:message for="eventsBeanExampleName" styleClass="error"/>
+							<h:inputText id="eventBeanExampleName" maxLength="100" value="#{eventBean.example.name}"/>
+							<h:message for="eventBeanExampleName" styleClass="error"/>
 						</h:panelGroup>
 						<h:outputText/>
-						<h:outputLabel for="eventsBeanExampleAbout" value="About:"/>
+						<h:outputLabel for="eventBeanExampleAbout" value="About:"/>
 						<h:panelGroup>
-							<h:inputTextarea id="eventsBeanExampleAbout" value="#{eventsBean.example.about}"/>
-							<h:message for="eventsBeanExampleAbout" styleClass="error"/>
+							<h:inputTextarea id="eventBeanExampleAbout" value="#{eventBean.example.about}"/>
+							<h:message for="eventBeanExampleAbout" styleClass="error"/>
 						</h:panelGroup>
 						<h:outputText/>
-						<h:outputLabel for="eventsBeanExampleType" value="Type:"/>
+						<h:outputLabel for="eventBeanExampleType" value="Type:"/>
 						<h:panelGroup>
-							<h:selectOneMenu converter="#{typBean.converter}" id="eventsBeanExampleType" value="#{eventsBean.example.type}">
+							<h:selectOneMenu converter="#{typBean.converter}" id="eventBeanExampleType" value="#{eventBean.example.type}">
 								<f:selectItem/>
 								<f:selectItems itemLabel="#{forgeview:display(_item)}" itemValue="#{_item}" value="#{typBean.all}" var="_item"/>
 							</h:selectOneMenu>
-							<h:message for="eventsBeanExampleType" styleClass="error"/>
+							<h:message for="eventBeanExampleType" styleClass="error"/>
 						</h:panelGroup>
 						<h:outputText/>
 					</h:panelGrid>
 					<h:panelGroup styleClass="buttons">
-						<h:commandLink value="Search" action='#{eventsBean.search}' styleClass="btn btn-primary"/>
-						<h:commandLink value="Create New" action='#{eventsBean.create}' styleClass="btn btn-primary"/>
+						<h:commandLink value="Search" action='#{eventBean.search}' styleClass="btn btn-primary"/>
+						<h:commandLink value="Create New" action='#{eventBean.create}' styleClass="btn btn-primary"/>
 					</h:panelGroup>
 				</h:panelGroup>
 			</f:validateBean>
 			
-			<h:dataTable id="eventsBeanPageItems" styleClass="data-table" value="#{eventsBean.pageItems}" var="_item">
+			<h:dataTable id="eventBeanPageItems" styleClass="data-table" value="#{eventBean.pageItems}" var="_item">
 				<h:column>
 					<f:facet name="header">
 						<h:outputText value="Name"/>
 					</f:facet>
-					<h:link outcome="/events/view">
+					<h:link outcome="/event/view">
 						<f:param name="id" value="#{_item.id}"/>
 						<h:outputText id="_itemName" value="#{_item.name}"/>
 					</h:link>
@@ -73,14 +73,14 @@
 					<f:facet name="header">
 						<h:outputText value="About"/>
 					</f:facet>
-					<h:link outcome="/events/view">
+					<h:link outcome="/event/view">
 						<f:param name="id" value="#{_item.id}"/>
 						<h:inputTextarea id="_itemAbout" value="#{_item.about}"/>
 					</h:link>
 				</h:column>
 			</h:dataTable>
 			<ui:include src="/resources/scaffold/paginator.xhtml">
-				<ui:param name="paginatorBean" value='#{eventsBean}'/>
+				<ui:param name="paginatorBean" value='#{eventBean}'/>
 			</ui:include>
 		</h:form>
 			
