--- a/src/main/webapp/resources/scaffold/pageTemplate.xhtml
+++ b/src/main/webapp/resources/scaffold/pageTemplate.xhtml
@@ -17,12 +17,23 @@
 			<div class="container">
 				<h:link id="brandLink" outcome="/index.xhtml" styleClass="brand">
 					<h:outputText value="Welcome to " rendered=" #{request.userPrincipal !=null} "/>
-                    Event Mgr
+                    Event Manager
                     <h:outputText value=",  #{request.userPrincipal.name}" rendered="#{request.userPrincipal !=null} "/>
 				</h:link>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
-						<li><a href="http://forge.jboss.org/document/hands-on-lab">How to Customize</a></li>
+				<li>
+					<h:link outcome="/branch/search" value="Corporation Branches"/>
+				</li>
+				<li>
+					<h:link outcome="/event/search" value="Events"/>
+				</li>
+				<li>
+					<h:link outcome="/sponsor/search" value="Sponsors"/>
+				</li>
+				<li>
+					<h:link outcome="/typ/search" value="Event Types"/>
+				</li>
 					</ul>
 				</div>
 			</div>
@@ -32,22 +43,8 @@
 	<div class="container forgecontainer">
 		<div id="navigation">
 			<h:link id="homeLink" outcome="/index.xhtml">
-				<h:graphicImage value='#{resource["forge-logo.png"]}' alt="Forge... get hammered" border="0" />	
+				<h:graphicImage value='#{resource["star_event.gif"]}' alt="eventmgrlogo" border="0" />	
 			</h:link>
-			<ul>
-				<li>
-					<h:link outcome="/branch/search" value="Branch"/>
-				</li>
-				<li>
-					<h:link outcome="/event/search" value="Event"/>
-				</li>
-				<li>
-					<h:link outcome="/sponsor/search" value="Sponsor"/>
-				</li>
-				<li>
-					<h:link outcome="/typ/search" value="Typ"/>
-				</li>
-			</ul>
 		</div>
 
 		<div id="content">
@@ -64,7 +61,7 @@
 
 	<footer>
 		<div id="footer-wrapper">
-	    	<p>Powered by <a href="http://jboss.org/forge">Forge</a></p>
+	    	<p>Created by Damian Żołądek</p>
 	    </div>
 	</footer>
 
